<resources>
    <string name="app_name">Book Store</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_customer_set_up">CustomerSetUp</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_date_of_birth_dd_mm_yyyy">Enter Date of Birth (DD/MM/YYYY)</string>
    <string name="enter_your_card_number">Enter Your Card Number</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="search_title">Search Title</string>
    <string name="price">Price</string>
    <string name="todo">TODO</string>
    <string name="clear">Clear</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="hint">hint</string>
    <string name="upload_image">Upload Image</string>
    <string name="book_price">Book Price</string>
    <string name="Qnt">qnt</string>
    <string name="qnt">Qnt</string>
    <string name="topic">Topic</string>
    <string name="long_press_any_book_in_list_to_update_or_delete">Long Press Any Book In List To Update Or Delete</string>
    <string name="book_author">Book Author</string>
    <string name="add_book">Add Book</string>
    <string name="customer_view">Customer View</string>
    <string name="search_book">Search Book</string>
    <string name="view_customer_details">View Customer details</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_new_author">Enter New Author</string>
    <string name="enter_new_price">Enter New Price</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="enter_new_category">Enter New Category</string>
    <string name="upload_new_image">Upload New Image</string>
    <string name="update_book">Update Book</string>
    <string name="delete">Delete</string>
    <string name="price">Price</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="book_price">Book Price</string>
    <string name="author">Author</string>
</resources>
